# pkg/api/constants/extensions.go
@@ -4,21 +4,31 @@ package constants
 const (
 	ExtCatalogPrefix     = "/_catalog"
 	ExtOciDiscoverPrefix = "/_oci/ext/discover"
-	// zot specific extensions.
-	ExtPrefix = "/_zot/ext"
 
+	// zot specific extensions.
+	BasePrefix = "/_zot"
+	ExtPrefix  = BasePrefix + "/ext"
+
+	// search extension.
 	ExtSearch        = "/search"
 	ExtSearchPrefix  = ExtPrefix + ExtSearch
 	FullSearchPrefix = RoutePrefix + ExtSearchPrefix
 
-	ExtMgmt        = "/mgmt"
-	ExtMgmtPrefix  = ExtPrefix + ExtMgmt
-	FullMgmtPrefix = RoutePrefix + ExtMgmtPrefix
+	// mgmt extension.
+	Mgmt     = "/mgmt"
+	ExtMgmt  = ExtPrefix + Mgmt
+	FullMgmt = RoutePrefix + ExtMgmt
 
-	ExtUserPreferences        = "/userprefs"
-	ExtUserPreferencesPrefix  = ExtPrefix + ExtUserPreferences
-	FullUserPreferencesPrefix = RoutePrefix + ExtUserPreferencesPrefix
-	ExtAPIKey                 = "/apikey"
-	ExtAPIKeyPrefix           = ExtPrefix + ExtAPIKey //nolint: gosec
-	FullAPIKeyPrefix          = RoutePrefix + ExtAPIKeyPrefix
+	// signatures extension.
+	Notation     = "/notation"
+	ExtNotation  = ExtPrefix + Notation
+	FullNotation = RoutePrefix + ExtNotation
+	Cosign       = "/cosign"
+	ExtCosign    = ExtPrefix + Cosign
+	FullCosign   = RoutePrefix + ExtCosign
+
+	// user preferences extension.
+	UserPrefs     = "/userprefs"
+	ExtUserPrefs  = ExtPrefix + UserPrefs
+	FullUserPrefs = RoutePrefix + ExtUserPrefs
 )
